some page complate

--- a/app/pages/index/index.html
+++ b/app/pages/index/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <meta http-equiv="x-ua-compatible" content="ie=edge">
 		<title>BALI</title>
 	</head>
 	<body>
@@ -11,6 +12,12 @@
 				<div class="nav-bar__logo">
 					LOGO
 				</div>
+                <div class="nav-bar__search">
+                    <input type="text">
+                    <button>
+                        <i class="icon-search"></i>
+                    </button>
+                </div>
 				<ul class="nav-bar__nav">
 					<li class="active">
                         <a href="#">Home</a>
