--- a/app/pages/share/share.html
+++ b/app/pages/share/share.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <div class="product-container" id="page-warpper">
-        <div class="product__video">
-            <div class="product__video--warpper" id="video-warpper">
+        <!--<div class="product__video">
+            <div class="product__video&#45;&#45;warpper" id="video-warpper">
                 <video class="video" src=""></video>
             </div>
         </div>
@@ -28,7 +28,7 @@
         </div>
         <div class="product__body">
             share
-        </div>
+        </div>-->
     </div>
 </body>
 </html>
