--- a/app/pages/index/index.html
+++ b/app/pages/index/index.html
@@ -7,39 +7,7 @@
 		<title>BALI</title>
 	</head>
 	<body>
-		<div class="nav-container fixed-top">
-			<nav class="nav-bar">
-				<div class="nav-bar__logo">
-					LOGO
-				</div>
-                <div class="nav-bar__search">
-                    <input type="text">
-                    <button>
-                        <i class="icon-search"></i>
-                    </button>
-                </div>
-				<ul class="nav-bar__nav">
-					<li class="active">
-                        <a href="#">Home</a>
-                    </li>
-					<li>
-                        <a href="#">About Us</a>
-                    </li>
-					<li>
-                        <a href="#">About Bali</a>
-                    </li>
-					<li>
-                        <a href="#">Download Apps</a>
-                    </li>
-					<li>
-                        <a href="#">Log In</a>
-                    </li>
-					<li>
-                        <a href="#">Register</a>
-                    </li>
-				</ul>
-			</nav>
-		</div>
+        #include("../../components/header/header-no-search.html")
         <div id="demo" class="carousel slide" data-ride="carousel">
             <!-- 指示符 -->
             <ul class="carousel-indicators">
