--- a/app/pages/news-details/news-details.html
+++ b/app/pages/news-details/news-details.html
@@ -7,9 +7,9 @@
     <title>BALI</title>
 </head>
 <body>
-    <div class="giant-screen">
-        <img src="../../assets/img/img-1@2x.jpg" alt="">
-    </div>
+    #include("../../components/header/header-has-search.html")
+    #include("../../components/giant-screen/giant-screen.html")
+    #include("../../components/category/category.html")
     <div class="news-details">
         <div class="news-details__pic">
             <img src="../../assets/img/mm10.jpg" alt="">
@@ -59,55 +59,6 @@
             </div>
         </div>
     </div>
-    <div class="news-list">
-        <div class="news-list__head">
-            <h5>News</h5>
-            <a href="#">See more</a>
-        </div>
-        <ul class="news-list__items">
-            <li class="item">
-                <div class="pic">
-                    <img src="../../assets/img/mm10.jpg" alt="">
-                </div>
-                <div class="body">
-                    <h5>Bali volcano eruption 2017</h5>
-                    <p>Mount Agung volcano has put more than 4 million people on high alert. Thousands of residents living in Bali’s northeast have been forced to evacuate. Mount Agung volcano has put more than 4 million people on high alert. Thousands of residents living in Bali’s northeast have been forced to evacuate. Mount Agung volcano has put more than 4 million people on high alert. </p>
-                </div>
-            </li>
-            <li class="item">
-                <div class="pic">
-                    <img src="../../assets/img/mm10.jpg" alt="">
-                </div>
-                <div class="body">
-                    <h5>Hazardous Zone at 6-10KM Radius</h5>
-                    <p>Mount Agung volcano has put more than 4 million people on high alert. Thousands of residents living in Bali’s northeast have been forced to evacuate. Mount Agung volcano has put more than 4 million people on high alert. Thousands of residents living in Bali’s northeast have been forced to evacuate. Mount Agung volcano has put more than 4 million people on high alert. </p>
-                </div>
-            </li>
-            <li class="item">
-                <div class="pic">
-                    <img src="../../assets/img/mm10.jpg" alt="">
-                </div>
-                <div class="body">
-                    <h5>Bali Airport Operates Normally</h5>
-                    <p>Mount Agung volcano has put more than 4 million people on high alert. Thousands of residents living in Bali’s northeast have been forced to evacuate. Mount Agung volcano has put more than 4 million people on high alert. Thousands of residents living in Bali’s northeast have been forced to evacuate. Mount Agung volcano has put more than 4 million people on high alert. </p>
-                </div>
-            </li>
-            <li class="item">
-                <div class="pic">
-                    <img src="../../assets/img/mm10.jpg" alt="">
-                </div>
-                <div class="body">
-                    <h5>Bali volcano eruption 2017</h5>
-                    <p>Mount Agung volcano has put more than 4 million people on high alert. Thousands of residents living in Bali’s northeast have been forced to evacuate. Mount Agung volcano has put more than 4 million people on high alert. Thousands of residents living in Bali’s northeast have been forced to evacuate. Mount Agung volcano has put more than 4 million people on high alert. </p>
-                </div>
-            </li>
-        </ul>
-    </div>
-    <div class="footer-container">
-        <div class="footer-bar">
-            <span>©2010-2013 Bali Tourism Board All Rights Reserved.</span>
-            <span>Terms of Use Privacy</span>
-        </div>
-    </div>
+    #include("../../components/footer/footer.html")
 </body>
 </html>
