--- a/app/pages/product-details/product-details.html
+++ b/app/pages/product-details/product-details.html
@@ -7,6 +7,9 @@
     <title>BALI</title>
 </head>
 <body>
+    #include("../../components/header/header-has-search.html")
+    #include("../../components/giant-screen/giant-screen.html")
+    #include("../../components/category/category.html")
     <div class="product-container">
         <div class="product__video"></div>
         <div class="product__head">
@@ -28,5 +31,6 @@
             Step out onto your outdoor balcony and enjoy scenic hotel views. Additional perks for your visit here to Nusa Dua include a luxury on-site spa and a lagoon-style pool. Savor a delicious meal at our on-site restaurant, dine on the beach or sip a drink at the Pool Bar. Your children will have a blast at our Kids Club, too.
         </div>
     </div>
+    #include("../../components/footer/footer.html")
 </body>
 </html>
