--- a/app/pages/dashboard/dashboard.html
+++ b/app/pages/dashboard/dashboard.html
@@ -7,9 +7,12 @@
     <title>BALI</title>
 </head>
 <body>
+    #include("../../components/header/header-has-search.html")
+    #include("../../components/giant-screen/giant-screen.html")
+    #include("../../components/category/category.html")
     <div class="best-choice">
         <div class="best-choice__head">
-            <h5>News</h5>
+            <h5>Our Best Choice</h5>
             <a href="#">See more</a>
         </div>
         <ul class="best-choice__items clearfix">
@@ -153,8 +156,52 @@
                     </div>
                 </div>
             </li>
-
         </ul>
     </div>
+    <div class="news-list">
+        <div class="news-list__head">
+            <h5>News</h5>
+            <a href="#">See more</a>
+        </div>
+        <ul class="news-list__items">
+            <li class="item">
+                <div class="pic">
+                    <img src="../../assets/img/mm10.jpg" alt="">
+                </div>
+                <div class="body">
+                    <h5>Bali volcano eruption 2017</h5>
+                    <p>Mount Agung volcano has put more than 4 million people on high alert. Thousands of residents living in Bali’s northeast have been forced to evacuate. Mount Agung volcano has put more than 4 million people on high alert. Thousands of residents living in Bali’s northeast have been forced to evacuate. Mount Agung volcano has put more than 4 million people on high alert. </p>
+                </div>
+            </li>
+            <li class="item">
+                <div class="pic">
+                    <img src="../../assets/img/mm10.jpg" alt="">
+                </div>
+                <div class="body">
+                    <h5>Hazardous Zone at 6-10KM Radius</h5>
+                    <p>Mount Agung volcano has put more than 4 million people on high alert. Thousands of residents living in Bali’s northeast have been forced to evacuate. Mount Agung volcano has put more than 4 million people on high alert. Thousands of residents living in Bali’s northeast have been forced to evacuate. Mount Agung volcano has put more than 4 million people on high alert. </p>
+                </div>
+            </li>
+            <li class="item">
+                <div class="pic">
+                    <img src="../../assets/img/mm10.jpg" alt="">
+                </div>
+                <div class="body">
+                    <h5>Bali Airport Operates Normally</h5>
+                    <p>Mount Agung volcano has put more than 4 million people on high alert. Thousands of residents living in Bali’s northeast have been forced to evacuate. Mount Agung volcano has put more than 4 million people on high alert. Thousands of residents living in Bali’s northeast have been forced to evacuate. Mount Agung volcano has put more than 4 million people on high alert. </p>
+                </div>
+            </li>
+            <li class="item">
+                <div class="pic">
+                    <img src="../../assets/img/mm10.jpg" alt="">
+                </div>
+                <div class="body">
+                    <h5>Bali volcano eruption 2017</h5>
+                    <p>Mount Agung volcano has put more than 4 million people on high alert. Thousands of residents living in Bali’s northeast have been forced to evacuate. Mount Agung volcano has put more than 4 million people on high alert. Thousands of residents living in Bali’s northeast have been forced to evacuate. Mount Agung volcano has put more than 4 million people on high alert. </p>
+                </div>
+            </li>
+        </ul>
+    </div>
+    #include("../../components/footer/footer.html")
 </body>
 </html>
