--- a/app/pages/news-details/news-details.html
+++ b/app/pages/news-details/news-details.html
@@ -59,6 +59,7 @@
             </div>
         </div>
     </div>
+    #include("../../components/news-list/news-list.html")
     #include("../../components/footer/footer.html")
 </body>
 </html>
