--- a/app/pages/index/index.html
+++ b/app/pages/index/index.html
@@ -18,24 +18,24 @@
             <!-- 轮播图片 -->
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="http://static.runoob.com/images/mix/img_fjords_wide.jpg">
+                    <img src="../../assets/img/banner-1.jpg">
+                    <div class="carousel-caption">
+                        <h3>Popular Tourist Destination in The World</h3>
+                        <p>Life in Bali is always related to Tri Hita Karana or a tripartite concept that includes the spiritual relationship between human and God.</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="../../assets/img/banner-2.jpg">
                     <div class="carousel-caption">
                         <h3>Getting Easier to Bali with Bali Travel Board</h3>
                         <p>Make Bali as the best destination in the world through the professional improvement of tourism destination area.</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="http://static.runoob.com/images/mix/img_nature_wide.jpg">
+                    <img src="../../assets/img/banner-3.jpg">
                     <div class="carousel-caption">
-                        <h3>Getting Easier to Bali with Bali Travel Board</h3>
-                        <p>Make Bali as the best destination in the world through the professional improvement of tourism destination area.</p>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <img src="http://static.runoob.com/images/mix/img_mountains_wide.jpg">
-                    <div class="carousel-caption">
-                        <h3>Getting Easier to Bali with Bali Travel Board</h3>
-                        <p>Make Bali as the best destination in the world through the professional improvement of tourism destination area.</p>
+                        <h3>Get an Unforgettable Experience on The Island of Bali</h3>
+                        <p>Life in Bali is always related to Tri Hita Karana or a tripartite concept that includes the spiritual relationship between human and God.</p>
                     </div>
                 </div>
             </div>
@@ -46,6 +46,21 @@
             <a class="carousel-control-next" href="#demo" data-slide="next">
                 <span class="carousel-control-next-icon"></span>
             </a>
+        </div>
+        #include("../../components/category/category.html")
+
+        #include("../../components/best-choice/best-choice.html")
+
+        #include("../../components/news-list/news-list.html")
+
+        <div class="download">
+            <div class="download-contain">
+                <div class="phone-warpper"></div>
+                <div class="btn-warpper">
+                    <p>Available on</p>
+                    <a href="javascript:void(0);" target="_blank"></a>
+                </div>
+            </div>
         </div>
         <div class="footer-container fixed-bottom">
             <div class="footer-bar">
