--- a/app/pages/index/index.html
+++ b/app/pages/index/index.html
@@ -7,6 +7,7 @@
 		<title>BALI</title>
 	</head>
 	<body>
+        #include("../../components/modal/modal.html")
         #include("../../components/header/header-no-search.html")
         <div id="demo" class="carousel slide" data-ride="carousel">
             <!-- 指示符 -->
