--- a/app/pages/index/index.html
+++ b/app/pages/index/index.html
@@ -9,12 +9,12 @@
 	<body>
         #include("../../components/modal/modal.html")
         #include("../../components/header/header-no-search.html")
-        <div id="demo" class="carousel slide" data-ride="carousel">
+        <div id="banner" class="carousel slide" data-ride="carousel">
             <!-- 指示符 -->
             <ul class="carousel-indicators">
-                <li data-target="#demo" data-slide-to="0" class="active"></li>
-                <li data-target="#demo" data-slide-to="1"></li>
-                <li data-target="#demo" data-slide-to="2"></li>
+                <li data-target="#banner" data-slide-to="0" class="active"></li>
+                <li data-target="#banner" data-slide-to="1"></li>
+                <li data-target="#banner" data-slide-to="2"></li>
             </ul>
             <!-- 轮播图片 -->
             <div class="carousel-inner">
@@ -41,10 +41,10 @@
                 </div>
             </div>
             <!-- 左右切换按钮 -->
-            <a class="carousel-control-prev" href="#demo" data-slide="prev">
+            <a class="carousel-control-prev" href="#banner" data-slide="prev">
                 <span class="carousel-control-prev-icon"></span>
             </a>
-            <a class="carousel-control-next" href="#demo" data-slide="next">
+            <a class="carousel-control-next" href="#banner" data-slide="next">
                 <span class="carousel-control-next-icon"></span>
             </a>
         </div>
@@ -54,7 +54,7 @@
 
         #include("../../components/news-list/news-list.html")
 
-        <div class="download">
+        <div class="download" id="download">
             <div class="download-contain">
                 <div class="phone-warpper"></div>
                 <div class="btn-warpper">
