--- a/app/pages/about-bali/about-bali.html
+++ b/app/pages/about-bali/about-bali.html
@@ -9,14 +9,16 @@
 <body>
     #include("../../components/header/header-dark.html")
     <div class="warpper">
-        <h3 class="tit">ABOUT BALI</h3>
-        <div class="content">
-            <p>
-                Bali is the most popular island holiday destination in the Indonesian archipelago. The island’s home to an ancient culture that's known for its warm hospitality. Exotic temples and palaces set against stunning natural backdrops are some of its top attractions. Dining in Bali presents endless choices of local or far-flung cuisine. After sunset, famous nightspots come to life offering exciting clubbing and packed dance floors. Inland, towering volcanoes and pristine jungles greet you with plenty to see and do. Most can't stay away from the beach for long, though.
-            </p>
-            <p>
-                Enjoy amazing beach resorts and luxury resorts in any of Bali’s famous areas. These include Kuta, Seminyak and Jimbaran where most of the great hotels and villas are right on the beach. They’re also home to most of Bali’s exciting surf spots. For tranquil seascapes and sunrises, the eastern beach resorts are your best bets. These include Sanur, Nusa Dua and the remote coast of Candidasa are your best bets.
-            </p>
+        <div class="warpper-inner">
+            <h3 class="tit">ABOUT BALI</h3>
+            <div class="content">
+                <p>
+                    Bali is the most popular island holiday destination in the Indonesian archipelago. The island’s home to an ancient culture that's known for its warm hospitality. Exotic temples and palaces set against stunning natural backdrops are some of its top attractions. Dining in Bali presents endless choices of local or far-flung cuisine. After sunset, famous nightspots come to life offering exciting clubbing and packed dance floors. Inland, towering volcanoes and pristine jungles greet you with plenty to see and do. Most can't stay away from the beach for long, though.
+                </p>
+                <p>
+                    Enjoy amazing beach resorts and luxury resorts in any of Bali’s famous areas. These include Kuta, Seminyak and Jimbaran where most of the great hotels and villas are right on the beach. They’re also home to most of Bali’s exciting surf spots. For tranquil seascapes and sunrises, the eastern beach resorts are your best bets. These include Sanur, Nusa Dua and the remote coast of Candidasa are your best bets.
+                </p>
+            </div>
         </div>
      </div>
     #include("../../components/footer/footer.html")
