--- a/app/pages/about-us/about-us.html
+++ b/app/pages/about-us/about-us.html
@@ -9,49 +9,51 @@
 <body>
     #include("../../components/header/header-dark.html")
     <div class="warpper">
-        <h3 class="tit">ABOUT US</h3>
-        <ul class="items">
-            <li>
-                <div class="pic-warper">
-                    <div class="pic">
-                        <img src="" alt="">
+        <div class="warpper-inner">
+            <h3 class="tit">ABOUT US</h3>
+            <ul class="items">
+                <li>
+                    <div class="pic-warper">
+                        <div class="pic">
+                            <img src="../../assets/img/about-us-1.png" alt="">
+                        </div>
                     </div>
-                </div>
-                <div class="txt-warper text-left">
-                    Bali Tourism Board (BTB) formed by nine Tourism Associations in Bali on 1st March 2002 with its main aim to build and develop a better and sustainable .tourism industry in Bali and Indonesia.
-                </div>
-            </li>
-            <li>
-                <div class="txt-warper text-right">
-                    Considering the importance of tourism and its reliable tourism board that could associate with government and local community, therefore based on letter of intent of the chairperson of some tourism associations number: 001/AS-Par/XII/2001 followed by approval from Governor of Bali on 10 May 2002 made the Bali Tourism Board reborn with its new paradigm – partnership between professionals, government and local community.
-                </div>
-                <div class="pic-warper">
-                    <div class="pic">
-                        <img src="" alt="">
+                    <div class="txt-warper text-left">
+                        Bali Tourism Board (BTB) formed by nine Tourism Associations in Bali on 1st March 2002 with its main aim to build and develop a better and sustainable .tourism industry in Bali and Indonesia.
                     </div>
-                </div>
-            </li>
-            <li>
-                <div class="pic-warper">
-                    <div class="pic">
-                        <img src="" alt="">
+                </li>
+                <li>
+                    <div class="txt-warper text-right">
+                        Considering the importance of tourism and its reliable tourism board that could associate with government and local community, therefore based on letter of intent of the chairperson of some tourism associations number: 001/AS-Par/XII/2001 followed by approval from Governor of Bali on 10 May 2002 made the Bali Tourism Board reborn with its new paradigm – partnership between professionals, government and local community.
                     </div>
-                </div>
-                <div class="txt-warper text-left">
-                    BTB positions itself as an organization that channeling communication and information, representation, consultation for tourism, public and government with new spirit and paradigm. BTB will not specialize in tourism industry only, but will put any effort to increase the quality of life with synergy of Non Govern Organizations, Mass Media, and Local Authorities. With this new paradigm, BTB is clearly functioning as a tourism board that responsible for a better quality of life of the local community.
-                </div>
-            </li>
-            <li>
-                <div class="txt-warper text-right">
-                    On May 6th 2011, Bali Tourism Board has turned into a new organization that recognized by National Law on Tourism of Republic of Indonesia (UU No. 11 Tahun 2009 Tentang Kepariwisataan), named in Indonesian: Gabungan Industri Pariwisata Indonesia (GIPI) Bali. BTB was re-established by eleven Bali tourism associations and has a wider function to develop and enhance cultural tourism in Bali.
-                </div>
-                <div class="pic-warper">
-                    <div class="pic">
-                        <img src="" alt="">
+                    <div class="pic-warper">
+                        <div class="pic">
+                            <img src="../../assets/img/about-us-2.png" alt="">
+                        </div>
                     </div>
-                </div>
-            </li>
-        </ul>
+                </li>
+                <li>
+                    <div class="pic-warper">
+                        <div class="pic">
+                            <img src="../../assets/img/about-us-3.png" alt="">
+                        </div>
+                    </div>
+                    <div class="txt-warper text-left">
+                        BTB positions itself as an organization that channeling communication and information, representation, consultation for tourism, public and government with new spirit and paradigm. BTB will not specialize in tourism industry only, but will put any effort to increase the quality of life with synergy of Non Govern Organizations, Mass Media, and Local Authorities. With this new paradigm, BTB is clearly functioning as a tourism board that responsible for a better quality of life of the local community.
+                    </div>
+                </li>
+                <li>
+                    <div class="txt-warper text-right">
+                        On May 6th 2011, Bali Tourism Board has turned into a new organization that recognized by National Law on Tourism of Republic of Indonesia (UU No. 11 Tahun 2009 Tentang Kepariwisataan), named in Indonesian: Gabungan Industri Pariwisata Indonesia (GIPI) Bali. BTB was re-established by eleven Bali tourism associations and has a wider function to develop and enhance cultural tourism in Bali.
+                    </div>
+                    <div class="pic-warper">
+                        <div class="pic">
+                            <img src="../../assets/img/about-us-4.png" alt="">
+                        </div>
+                    </div>
+                </li>
+            </ul>
+        </div>
     </div>
     #include("../../components/footer/footer.html")
 </body>
