--- a/app/pages/index/index.html
+++ b/app/pages/index/index.html
@@ -35,7 +35,7 @@
                 <div class="carousel-item">
                     <img src="../../assets/img/banner-3.jpg">
                     <div class="carousel-caption">
-                        <h3>Get an Unforgettable Experience on The Island of Bali</h3>
+                        <h3 style="width: 100%; max-width: 650px;">Get an Unforgettable Experience on The Island of Bali</h3>
                         <p>Life in Bali is always related to Tri Hita Karana or a tripartite concept that includes the spiritual relationship between human and God.</p>
                     </div>
                 </div>
