绑定商品列表、商品详情、新闻列表、新闻详情的数据

--- a/app/pages/news-details/news-details.html
+++ b/app/pages/news-details/news-details.html
@@ -8,58 +8,60 @@
 </head>
 <body>
     #include("../../components/header/header-has-search.html")
-    #include("../../components/giant-screen/giant-screen.html")
-    #include("../../components/category/category.html")
-    <div class="news-details">
-        <div class="news-details__pic">
-            <img src="../../assets/img/mm10.jpg" alt="">
+    <div class="layer-warpper">
+        #include("../../components/giant-screen/giant-screen.html")
+        #include("../../components/category/category.html")
+        <div class="news-details">
+            <!--<div class="news-details__pic">-->
+                <!--<img src="../../assets/img/mm10.jpg" alt="">-->
+            <!--</div>-->
+            <!--<div class="news-details__body">-->
+                <!--<h3 class="tit">Bali volcano eruption 2017</h3>-->
+                <!--<h5 class="subtit">KEMENTERIAN ENERGI DAN SUMBER DAYA MINERAL REPUBLIK INDONESIA SIARAN PERS</h5>-->
+                <!--<p class="date">-->
+                    <!--NOMOR: 002.Pers/04/SJI/2018 <br>-->
+                    <!--Tanggal: 04 Januari 2018-->
+                <!--</p>-->
+                <!--<div>-->
+                    <!--Radius Aman Gunung Agung Diturunkan dari 8-10 km Menjadi 6 km-->
+
+                    <!--Pusat Vulkanologi Dan Mitigasi Bencana Geologi (PVMBG), Badan Geologi Kementerian Energi Dan Sumber Daya Mineral (ESDM) menetapkan status Gunung Agung, Karang Asem, Bali masih berstatus “AWAS”, namun demikian PVMBG menurunkan batas radius aman untuk beraktifitas dari menjadi 6 kilometer dari sebelumnya 8 hingga 10 kilometer. Gunung Agung saat ini masih berada dalam fase erupsi dengan aktifitas vulkanik yang relatif tinggi dan fluktuatif.-->
+
+                    <!--Berdasarkan hasil analisis data visual maupun instrumental (seismik, deformasi dan geokimia), saat ini Gunung Agung masih berada dalam fase erupsi, aktivitas vulkanik  masih relatif tinggi dan fluktuatif. Material erupsi berupa lava yang mengisi kawah, hembusan/letusan abu, dan lontaran batuan di sekitar kawah.-->
+
+                    <!--Volume lava di dalam kawah sekitar 20 juta meter kubik atau sekitar 1/3  dari volume kawah (60 juta meter kubik). Laju pertumbuhan kubah saat ini rendah sehingga untuk memenuhi volume kawah dalam waktu singkat kemungkinannya kecil.-->
+
+                    <!--Status kegempaan Gunung Agung hingga kemarin, Rabu (3/1) pukul 18:00 WITA menunjukkan jumlah kegempaan dengan konten frekuensi tinggi maupun rendah hingga saat ini masih terus terekam mengindikasikan masih adanya tekanan dan aliran magma dari kedalaman hingga ke permukaan. Namun demikian, energi gempa saat ini belum menunjukkan trend naik yang signifikan.-->
+
+                    <!--Data Deformasi dalam beberapa hari terakhir juga nenunjukkan trend yang stagnan yang mengindikasikan belum ada peningkatan pada sumber tekanan yang signifikan. Data geokimia terakhir menunjukkan masih adanya gas magmatik SO2 dengan flux sekitar 100-300 ton/hari.-->
+
+                    <!--Perkiraan Potensi bahaya saat ini berupa lontaran batu pijar, pasir, kerikil, dan hujan abu pekat juga lahar hujan. Bahaya lontaran batu, pasir, kerikil, dan abu pekat diperkirakan melanda area di dalam radius 6 km dari kawah.-->
+
+                    <!--Sedangkan bahaya lahar hujan akan mengikuti lembah sungai yg berhulu dari Gunung Agung bergantung pada debit air maupun volume material erupsi.-->
+
+                    <!--Dengan skala erupsi pada saat ini (intermittent), maka potensi bahaya Awan Panas kemungkinannya masih relatif kecil karena selain pertumbuhan lava yang melambat untuk memenuhi isi kawah, juga kemungkinan lain yaitu untuk mendobrak kubah lava menjadi awan panas maka diperlukan pembangunan tekanan yang cukup besar, sementara itu pembangunan tekanan hingga hari ini belum menunjukkan pola peningkatan yang signifikan.-->
+
+                    <!--Rekomendasi:-->
+                    <!--1. Status AWAS dengan radius daerah bahaya yang sebelumnya 8 Km dari Kawah dan perluasan secara sektoral 10 Km menjadi 6 Km dari puncak. Status AWAS masih dipertahankan, mengingat saat ini Gunung Agung saat ini masih dalam fase erupsi dan berdampak pada pemukiman.-->
+
+                    <!--2. Kondisi Gunung Agung sangat dinamis maka sehubungan dengan status masih AWAS maka setiap pihak dihimbau untuk tetap menjaga kesiapsiagaan sehingga apabila terjadi perubahan yang cepat dapat diantisipasi dengan cepat.-->
+
+                    <!--Kepala Biro Komunikasi, Layanan Informasi-->
+                    <!--Publik, dan Kerja Sama-->
+                    <!--Agung Pribadi-->
+                    <!--Untuk keterangan lebih lanjut dapat menghubungi:-->
+                    <!--Kepala Biro Komunikasi, Layanan Informasi Publik dan Kerja Sama-->
+                    <!--Agung Pribadi (085795502038)-->
+
+                    <!--Ikuti linimasa kami di:-->
+                    <!--Facebook: Kementerian Energi dan Sumber Daya Mineral-->
+                    <!--Twitter: @KementerianESDM-->
+                    <!--Instagram: @kesdm-->
+                <!--</div>-->
+            <!--</div>-->
         </div>
-        <div class="news-details__body">
-            <h3 class="tit">Bali volcano eruption 2017</h3>
-            <h5 class="subtit">KEMENTERIAN ENERGI DAN SUMBER DAYA MINERAL REPUBLIK INDONESIA SIARAN PERS</h5>
-            <p class="date">
-                NOMOR: 002.Pers/04/SJI/2018 <br>
-                Tanggal: 04 Januari 2018
-            </p>
-            <div>
-                Radius Aman Gunung Agung Diturunkan dari 8-10 km Menjadi 6 km
-
-                Pusat Vulkanologi Dan Mitigasi Bencana Geologi (PVMBG), Badan Geologi Kementerian Energi Dan Sumber Daya Mineral (ESDM) menetapkan status Gunung Agung, Karang Asem, Bali masih berstatus “AWAS”, namun demikian PVMBG menurunkan batas radius aman untuk beraktifitas dari menjadi 6 kilometer dari sebelumnya 8 hingga 10 kilometer. Gunung Agung saat ini masih berada dalam fase erupsi dengan aktifitas vulkanik yang relatif tinggi dan fluktuatif.
-
-                Berdasarkan hasil analisis data visual maupun instrumental (seismik, deformasi dan geokimia), saat ini Gunung Agung masih berada dalam fase erupsi, aktivitas vulkanik  masih relatif tinggi dan fluktuatif. Material erupsi berupa lava yang mengisi kawah, hembusan/letusan abu, dan lontaran batuan di sekitar kawah.
-
-                Volume lava di dalam kawah sekitar 20 juta meter kubik atau sekitar 1/3  dari volume kawah (60 juta meter kubik). Laju pertumbuhan kubah saat ini rendah sehingga untuk memenuhi volume kawah dalam waktu singkat kemungkinannya kecil.
-
-                Status kegempaan Gunung Agung hingga kemarin, Rabu (3/1) pukul 18:00 WITA menunjukkan jumlah kegempaan dengan konten frekuensi tinggi maupun rendah hingga saat ini masih terus terekam mengindikasikan masih adanya tekanan dan aliran magma dari kedalaman hingga ke permukaan. Namun demikian, energi gempa saat ini belum menunjukkan trend naik yang signifikan.
-
-                Data Deformasi dalam beberapa hari terakhir juga nenunjukkan trend yang stagnan yang mengindikasikan belum ada peningkatan pada sumber tekanan yang signifikan. Data geokimia terakhir menunjukkan masih adanya gas magmatik SO2 dengan flux sekitar 100-300 ton/hari.
-
-                Perkiraan Potensi bahaya saat ini berupa lontaran batu pijar, pasir, kerikil, dan hujan abu pekat juga lahar hujan. Bahaya lontaran batu, pasir, kerikil, dan abu pekat diperkirakan melanda area di dalam radius 6 km dari kawah.
-
-                Sedangkan bahaya lahar hujan akan mengikuti lembah sungai yg berhulu dari Gunung Agung bergantung pada debit air maupun volume material erupsi.
-
-                Dengan skala erupsi pada saat ini (intermittent), maka potensi bahaya Awan Panas kemungkinannya masih relatif kecil karena selain pertumbuhan lava yang melambat untuk memenuhi isi kawah, juga kemungkinan lain yaitu untuk mendobrak kubah lava menjadi awan panas maka diperlukan pembangunan tekanan yang cukup besar, sementara itu pembangunan tekanan hingga hari ini belum menunjukkan pola peningkatan yang signifikan.
-
-                Rekomendasi:
-                1. Status AWAS dengan radius daerah bahaya yang sebelumnya 8 Km dari Kawah dan perluasan secara sektoral 10 Km menjadi 6 Km dari puncak. Status AWAS masih dipertahankan, mengingat saat ini Gunung Agung saat ini masih dalam fase erupsi dan berdampak pada pemukiman.
-
-                2. Kondisi Gunung Agung sangat dinamis maka sehubungan dengan status masih AWAS maka setiap pihak dihimbau untuk tetap menjaga kesiapsiagaan sehingga apabila terjadi perubahan yang cepat dapat diantisipasi dengan cepat.
-
-                Kepala Biro Komunikasi, Layanan Informasi
-                Publik, dan Kerja Sama
-                Agung Pribadi
-                Untuk keterangan lebih lanjut dapat menghubungi:
-                Kepala Biro Komunikasi, Layanan Informasi Publik dan Kerja Sama
-                Agung Pribadi (085795502038)
-
-                Ikuti linimasa kami di:
-                Facebook: Kementerian Energi dan Sumber Daya Mineral
-                Twitter: @KementerianESDM
-                Instagram: @kesdm
-            </div>
-        </div>
+        #include("../../components/news-list/news-list.html")
     </div>
-    #include("../../components/news-list/news-list.html")
     #include("../../components/footer/footer.html")
 </body>
 </html>
