--- a/app/pages/product-details/product-details.html
+++ b/app/pages/product-details/product-details.html
@@ -8,27 +8,31 @@
 </head>
 <body>
     #include("../../components/header/header-no-search.html")
-    #include("../../components/giant-screen/giant-screen.html")
-    #include("../../components/category/category.html")
-    <div class="product-container">
-        <div class="product__video"></div>
-        <div class="product__head">
-            <div class="l">
-                <h3>Marriot Hotel Bali</h3>
-                <p>
-                    <strong>Rp. 450,000</strong>
-                    <span>/</span>
-                    <span>average price</span>
-                </p>
-            </div>
-            <div class="r">
-                <a href="#">Visit Website</a>
-            </div>
-        </div>
-        <div class="product__body">
-            A luxury getaway awaits you here at the Courtyard Bali Nusa Dua Resort. Our sophisticated hotel features a private beach club, 5-star accommodations and an impeccable location - as well as award-winning service. All of our spacious rooms and suites are filled with thoughtful amenities including plush bedding, marble bathrooms and free high-speed Wi-Fi.
+    <div class="layer-warpper">
+        #include("../../components/giant-screen/giant-screen.html")
+        #include("../../components/category/category.html")
+        <div class="product-container">
+            <!--<div class="product__video">-->
+            <!--<a href="javascript:void(0);" class="play"></a>-->
+            <!--</div>-->
+            <!--<div class="product__head">-->
+            <!--<div class="l">-->
+            <!--<h3>Marriot Hotel Bali</h3>-->
+            <!--<p>-->
+            <!--<strong>Rp. 450,000</strong>-->
+            <!--<span>/</span>-->
+            <!--<span>average price</span>-->
+            <!--</p>-->
+            <!--</div>-->
+            <!--<div class="r">-->
+            <!--<a href="#">Visit Website</a>-->
+            <!--</div>-->
+            <!--</div>-->
+            <!--<div class="product__body">-->
+            <!--A luxury getaway awaits you here at the Courtyard Bali Nusa Dua Resort. Our sophisticated hotel features a private beach club, 5-star accommodations and an impeccable location - as well as award-winning service. All of our spacious rooms and suites are filled with thoughtful amenities including plush bedding, marble bathrooms and free high-speed Wi-Fi.-->
 
-            Step out onto your outdoor balcony and enjoy scenic hotel views. Additional perks for your visit here to Nusa Dua include a luxury on-site spa and a lagoon-style pool. Savor a delicious meal at our on-site restaurant, dine on the beach or sip a drink at the Pool Bar. Your children will have a blast at our Kids Club, too.
+            <!--Step out onto your outdoor balcony and enjoy scenic hotel views. Additional perks for your visit here to Nusa Dua include a luxury on-site spa and a lagoon-style pool. Savor a delicious meal at our on-site restaurant, dine on the beach or sip a drink at the Pool Bar. Your children will have a blast at our Kids Club, too.-->
+            <!--</div>-->
         </div>
     </div>
     #include("../../components/footer/footer.html")
