--- a/app/pages/about-us/about-us.html
+++ b/app/pages/about-us/about-us.html
@@ -7,6 +7,7 @@
     <title>BALI</title>
 </head>
 <body>
+    #include("../../components/modal/modal.html")
     #include("../../components/header/header-dark.html")
     <div class="warpper">
         <div class="warpper-inner">
