--- a/app/pages/product-details/product-details.html
+++ b/app/pages/product-details/product-details.html
@@ -7,6 +7,7 @@
     <title>BALI</title>
 </head>
 <body>
+    #include("../../components/modal/modal.html")
     #include("../../components/header/header-no-search.html")
     <div class="layer-warpper">
         #include("../../components/giant-screen/giant-screen.html")
