--- a/app/pages/best-choice/best-choice.html
+++ b/app/pages/best-choice/best-choice.html
@@ -7,6 +7,7 @@
     <title>BALI</title>
 </head>
 <body>
+    #include("../../components/modal/modal.html")
     #include("../../components/header/header-has-search.html")
     <div class="best-choice-warpper">
         #include("../../components/giant-screen/giant-screen.html")
