--- a/app/pages/terms-conditions/terms-conditions.html
+++ b/app/pages/terms-conditions/terms-conditions.html
@@ -7,6 +7,7 @@
     <title>BALI</title>
 </head>
 <body>
+    #include("../../components/modal/modal.html")
     #include("../../components/header/header-has-search.html")
     #include("../../components/giant-screen/giant-screen.html")
     #include("../../components/category/category.html")
