--- a/app/pages/index/index.html
+++ b/app/pages/index/index.html
@@ -63,7 +63,7 @@
                 </div>
             </div>
         </div>
-        <div class="footer-container fixed-bottom">
+        <div class="footer-container hide fixed-bottom js_footer">
             <div class="footer-bar">
                 <span>©2010-2013 Bali Tourism Board All Rights Reserved.</span>
                 <span>Terms of Use Privacy</span>
